Thu Jul 31 17:59:08 2003  Joern Thyssen  <jth@gnubg.org>

	* gtkboard.c (write_points): fix typo.
	* gtkboard.c (write_board): swap board when necesary.
	* gtkchequer.c (MoveListShowMove): do not swap sides.
	(fix bugs #4536 and #4513)

Thu Jul 31 11:36:53 GMT 2003 Jim Segrave <jes@jes-2.demon.nl>

	* rollout.c - prevent division by zero when jsds are small. This
          time it actually should do something
	* set.c - missing space in option description
	
Wed Jul 30 09:36:07 GMT 2003 Jim Segrave <jes@jes-2.demon.nl>

	* rollout.c - prevent division by zero when jsds are small
	
Mon Jul 28 21:31:19 2003  Joern Thyssen  <jth@gnubg.org>

	* gtkgame.c (InitGTK): new menu entry for IDLE (Python).
	* gnubg.c (HandleCommand): strip leading space of python commands.
	* gnubgmodule.c (PythonInitialise): set argv.

Mon Jul 28 14:31:43 GMT 2003 Jim Segrave <jes@jes-2.demon.nl>

	* play.c - missed initialising CubeDecPtr on beavers

Sun Jul 27 17:22:51 2003  Oystein Johansen  <oystein@gnubg.org>

	* simplelibgen.[ch] (new files): put 'dirname' and 'basename' in a new
        file, so makeweigths, makebearoff and makehyper can link.

Sun Jul 27 14:39:51 2003  Oystein Johansen  <oystein@gnubg.org>
	
	* gnubg.c (dirname), backgammon.h: Pacify fussy compilers.

Sun Jul 27 14:39:51 2003  Oystein Johansen  <oystein@gnubg.org>

	* gnubg.c, html.c, bearoff.c: improve 'dirname' where it's not present.

Sun Jul 27 13:59:51 2003  Joern Thyssen  <jth@gnubg.org>

	* text.c: move all Output* functions to new file format.c	
	(change all callers)
	* format.c, Makefile.am: new file.
	* gnubg.c (DisplayCubeAnalysis, DumpPosition): use 
	OutputCubeAnalysis instead of now deprecated GetCubeActionSz.

Sun Jul 27 12:05:37 2003  Joern Thyssen  <jth@gnubg.org>

	Oops, the html did not validate...

	* html.c (GetStyleGeneral): new function.
	* html.c (HTMLPrintMoveAnalysis): re-fix reentrancy problems.
	* html.c (HTMLPrologue): missing end tag on <link>
