@@ -1,3 +1,7 @@
+Fri Aug  1 08:43:01 GMT 2003 Jim Segrave <jes@jes-2.demon.nl>
+
+	* rollout.c - off by one error in minimum games check
+	
 Thu Jul 31 17:59:08 2003  Joern Thyssen  <jth@gnubg.org>
 
 	* gtkboard.c (write_points): fix typo.
